--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ resume_contact_email:           "hello@rohitsarang.com"
 resume_contact_telephone:       "+91 97111 94611"
 resume_contact_address:         "Dwarka, New Delhi"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+resume_header_contact_info:     "Dwarka, New Delhi, India • +91 97111-94611 • hello@rohitsarang.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Hi there! I am Rohit, and engineer turned payments professional. I am currently working at HDFC Bank as a Product Manager. I love playing with technology, building tools and have interest in finance. Hit me at hello@rohitsarang.com to know more. Lets meet over a coffee and explore!</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
