--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,4 +10,4 @@
   uni: Netaji Subhas Institute of Technology
   year: 2004 &mdash; 2008
   award: Awarded with Fist Class Graduate Degree
-  summary: You can choose to have either a single or multiple awards
+  summary: You can choose to have either a single or multiple awards.
