--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,21 +3,15 @@
 - company: HDFC Bank Limited
   position: Senior Manager- Product and Strategy
   duration: Sept, 2019 &mdash; Present
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Implementing payment solution programs, consulting CXO level, corporate portfolio management and B2B partnerships.</li><li>Performing need-gap analysis, wireframes, stakeholder analysis, working with cross functional teams (product, credit, legal, business, policy, operations) to ensure business requirements are clearly captured, documented and prioritized</li><li>Coordinating development of approved versions of business and functional specifications, defining objectives, establishing deadlines, monitoring milestone completion, A/B testing, tracking change requests etc</li></ul>
+  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>Implementing payment solution programs, consulting CXO level, corporate portfolio management and B2B partnerships.</li><li>Performing need-gap analysis, wireframes, stakeholder analysis, working with cross functional teams (product, credit, legal, business, policy, operations) to ensure business requirements are clearly captured, documented and prioritized</li><li>Coordinating development of approved versions of business and functional specifications, defining objectives, establishing deadlines, monitoring milestone completion, A/B testing, tracking change requests etc.</li></ul>
 
 # Director of Digital Stratgy
 - company: ICICI Bank Limited
   position: Solution Manager
   duration: July, 2016 &mdash; Aug, 2019
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments <ul class="resume-item-list"><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li>Implemented projects on pricing, expense management, internal authorization protocol tool</li>
-  <li>Leading analyses of portfolio performance, target market norms (TMN), risk factors, compliance and credit policy</li>
-  <li>Management of the life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD</li>
-  </ul>
-
-
+  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments <ul class="resume-item-list"><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li>Implemented projects on pricing, expense management, internal authorization protocol tool</li><li>Leading analyses of portfolio performance, target market norms (TMN), risk factors, compliance and credit policy</li><li>Management of the life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD</li></ul>
 # Communications Coordinator
 - company: Allahabad Bank
   position: Marketing Manager
-  duration: Sept, 2012  &mdash; June, 2016
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Designed and implemented internal/ external marketing campaigns for digital payment solutions, B2B asset products</li><li>Consultative sales for positioning and pricing of B2B vendor payment solutions and retail cards</li><li>Activation of e-wallet (empower) and mPOS and digital banking channels across Delhi NCR region</li>
-  </ul>
+  duration: Sept, 2012  &mdash; June, 2016.
+  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Designed and implemented internal/ external marketing campaigns for digital payment solutions, B2B asset products</li><li>Consultative sales for positioning and pricing of B2B vendor payment solutions and retail cards</li><li>Activation of e-wallet (empower) and mPOS and digital banking channels across Delhi NCR region</li></ul>
