--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
+- award: Certified Blockchain Specialist
+  organization: Coursera, University of Buffalo
+  year: 2021
   summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Google Certified Project Manager
+  organization: Coursera, Google
+  year: 2021
+  summary: Awarded as Google Certified Project Manager
