--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings 
 title: "Home- Rohit Sarang"
-description: "My CV!"
+description: "My CV!!"
 
 # Build settings
 markdown: kramdown
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Rohit Sarang"
-resume_title:                   "Chief Magic Officer"
+resume_title:                   "Budding Chief Magic Officer"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "hello@rohitsarang.com"
@@ -40,7 +40,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 # resume_section_associations:    false
-# resume_section_interests:       true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
