--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,12 +2,12 @@
 - degree: Master of Business Administration, International Business
   uni: Delhi Schoool of Economics, University of Delhi
   year: 2010 &mdash; 2012
-  awards:
-    - award: Awarded with Fist Class Post-Graduate Degree
-  summary: If you had any meaningful roles at college, feel free to write about them here
+  #awards:
+  #  - award: Awarded with Fist Class Post-Graduate Degree
+  #summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Bachelor of Engineering, Instrumentation and Control
   uni: Netaji Subhas Institute of Technology
   year: 2004 &mdash; 2008
-  award: Awarded with Fist Class Graduate Degree
-  summary: You can choose to have either a single or multiple awards.
+  #award: Awarded with Fist Class Graduate Degree
+  #summary: You can choose to have either a single or multiple awards.
