--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,14 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Product Management
+  description: Experienced in leading business departments in conceptualising and implementing product ideas. Specialised in digital payment product and banking dominan.
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+- skill: Solution Design and Delivery
+  description: Managing all resources, requirements, stakeholders, issues and risks, and project standards for the successful delivery of product/solution delivery. Specialised in Consultative Sales and Solution Management.
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+- skill: Python, SQL, Microsoft Excel and Tableau
+- skill: Experienced in working with management tools like, JIRA, VISA Intellilink, SAP Concur, TSYS Prime
+  description: Crazy about Bitcoin, Decentralised Finance and Blockchain Development on Solidity powered Ethereum blockchain 
+
