--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Master of Business Administration, International Business
-  uni: Delhi Schoool of Economics, University of Delhi
+  uni: Delhi School of Economics, University of Delhi
   year: 2010 &mdash; 2012
   #awards:
   #  - award: Awarded with Fist Class Post-Graduate Degree
