--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,16 +9,16 @@
 - company: ICICI Bank Limited
   position: Solution Manager
   duration: July, 2016 &mdash; Aug, 2019
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments <ul class="resume-item-list"><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li>Leading analyses of portfolio performance, target market norms (TMN), risk factors, compliance and credit policy. Managed life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD etc.</li></ul>
+  summary: <ul class="resume-item-list"><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li>Leading analyses of portfolio performance, target market norms (TMN), risk factors, compliance and credit policy. Managed life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD etc.</li></ul>
 # Communications Coordinator
 - company: Allahabad Bank
   position: Marketing Manager
   duration: Sept, 2012  &mdash; June, 2016.
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Designed and implemented internal/ external marketing campaigns for digital payment solutions, B2B asset products. Managed consultative sales, positioning and pricing of B2B vendor payment solutions and retail cards.</li></ul>
+  summary: <ul class="resume-item-list"><li>Designed and implemented internal/ external marketing campaigns for digital payment solutions, B2B asset products. Managed consultative sales, positioning and pricing of B2B vendor payment solutions and retail cards.</li></ul>
 
 
   # Communications Coordinator
 - company: HCL Technologies Limited
   position: Associate Business Analyst
   duration: Sept, 2008  &mdash; June, 2010.
-  summary: Business Analysis- Projects of Media, Entertainment and Publishing domain, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Requirement elicitation and documenting</li></ul>
+  summary: Business Analysis- Projects of Media, Entertainment and Publishing domain, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Requirement elicitation and documentation</li></ul>
