--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,14 +1,14 @@
 # Skills
 # Organizational leadership
 - skill: Product Management
-  description: Experienced in leading business departments in conceptualising and implementing product ideas. Specialised in digital payment product and banking dominan.
+  description: Experienced in leading business teams in conceptualising and implementing product solutions. Specialised in digital payment product and banking domain.
 
 # Communications strategy
 - skill: Solution Design and Delivery
-  description: Managing all resources, requirements, stakeholders, issues and risks, and project standards for the successful delivery of product/solution delivery. Specialised in Consultative Sales and Solution Management.
+  description: Managing resources, requirements, stakeholders, issues and risks, and project standards for the successful delivery of product/solution. Specialised in consultative sales and solution management.
 
 # Digital content development and creation
 - skill: Python, SQL, Microsoft Excel and Tableau
-- skill: Experienced in working with management tools like, JIRA, VISA Intellilink, SAP Concur, TSYS Prime
-  description: Crazy about Bitcoin, Decentralised Finance and Blockchain Development on Solidity powered Ethereum blockchain 
+- skill: Experienced in working with management tools viz. JIRA, VISA Intellilink, SAP Concur, TSYS Prime
+  description: Crazy about Bitcoin, Decentralised Finance and Blockchain Development on Solidity powered Ethereum ecosystem. 
 
