--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Human rights and World Affairs
 - description: Photography
 - description: Driving and Hiking
+- description: Reading, Writing, and World Affairs
