--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,14 +1,13 @@
 # Jobs
 
 # Cards Pricing Strategy and Product Manager VISA Mastercard
-- company: SBI Cards and Payment Services Ltd
+- company: SBI Cards and Payment Services Limited
   position: Assistant Vice President- Pricing, Network and Products
   duration: Apr, 2022 &mdash; Present
-  summary: Member, Pricing Council, SBI Cards and Payment
-
+  summary: Member, Pricing Council, SBI Cards and Payment<ul class="resume-item-list"><li>Monitoring and managing cost heads, fee income, aligning fee structure basis benchmarking and pricing policy</li><li>Conceptualizing new fee lines and structure for revenue enhancement, implementing pricing projects, scope identification and enforcement of regulatory compliance</li><li>Commercial Agreement for MasterCard- Worked towards achieving strategically and financially viable incentive deal</li><li>Network Spend Forecast Model & Sourcing Model- Created spend forecast model and sourcing model for VISA, MasterCard, RuPay & AmEx to ensure profitable sourcing design and maximize incentives</li><li>Identifying opportunities to reduce cost and enhance revenue, managing network partners & internal stakeholders for implementing cost optimization projects</li></ul>
 
 # VP of Global Communications
-- company: DDDDDDD
+- company: HDFC Bank Limited
   position: Senior Manager- Product and Strategy
   duration: Sept, 2019 &mdash; Present
   summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>Implementing payment solution programs, consulting CXO level, corporate portfolio management and B2B partnerships.</li><li>Performing need-gap analysis, wireframes, stakeholder analysis, working with cross functional teams (product, credit, legal, business, policy, operations) to ensure business requirements are clearly captured, documented and prioritized</li><li>Coordinating development of approved versions of business and functional specifications, defining objectives, establishing deadlines, monitoring milestone completion, A/B testing, tracking change requests etc.</li></ul>
