--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -10,14 +10,15 @@
 # VP of Global Communications
 - company: HDFC Bank Limited
   position: Senior Manager- Product and Strategy
-  duration: Sept, 2019 &mdash; Present
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>Implementing payment solution programs, consulting CXO level, corporate portfolio management and B2B partnerships.</li><li>Performing need-gap analysis, wireframes, stakeholder analysis, working with cross functional teams (product, credit, legal, business, policy, operations) to ensure business requirements are clearly captured, documented and prioritized</li><li>Coordinating development of approved versions of business and functional specifications, defining objectives, establishing deadlines, monitoring milestone completion, A/B testing, tracking change requests etc.</li></ul>
+  duration: Sept, 2019 &mdash; Apr, 2022
+  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>•	Implementing payment solution programs, corporate portfolio management and B2B partnerships</li><li>•	Performing need-gap analysis, stakeholder analysis, working with cross functional teams to ensure business requirements are clearly captured, documented and prioritized </li></ul>
 
 # Director of Digital Stratgy
 - company: ICICI Bank Limited
   position: Solution Manager
   duration: July, 2016 &mdash; Aug, 2019
-  summary: <ul class="resume-item-list"><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li>Leading analyses of portfolio performance, target market norms (TMN), risk factors, compliance and credit policy. Managed life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD etc.</li></ul>
+  summary: <ul class="resume-item-list"><li>Implementing payment programs through commercial cards, vendor payment platforms and procurement to pay (P2P)</li><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li> Management of the life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD etc.</ul>
+
 # Communications Coordinator
 - company: Allahabad Bank
   position: Marketing Manager
