--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,31 +3,31 @@
 # Cards Pricing Strategy and Product Manager VISA Mastercard
 - company: SBI Cards and Payment Services Limited
   position: Assistant Vice President- Pricing, Network and Products
-  duration: Apr, 2022 &mdash; Present
+  duration: Apr 2022 &mdash; Present
   summary: Member, Pricing Council, SBI Cards and Payment<ul class="resume-item-list"><li>Monitoring and managing cost heads, fee income, aligning fee structure basis benchmarking and pricing policy</li><li>Conceptualizing new fee lines and structure for revenue enhancement, implementing pricing projects, scope identification and enforcement of regulatory compliance</li><li>Commercial Agreement for MasterCard- Worked towards achieving strategically and financially viable incentive deal</li><li>Network Spend Forecast Model & Sourcing Model- Created spend forecast model and sourcing model for VISA, MasterCard, RuPay & AmEx to ensure profitable sourcing design and maximize incentives</li><li>Identifying opportunities to reduce cost and enhance revenue, managing network partners & internal stakeholders for implementing cost optimization projects</li></ul>Product Manager, SBI Cards PULSE Card<ul class="resume-item-list"><li>Product planning, P&L management, cost monitoring, partner management and value proposition revamps</li><li>Managed & developed tactical marketing intervention campaigns, customer fulfillment which led to 4 Lakh issuance in first 10 months of launch</li><li>Conceptualize, launch new products, addressing change requests and facilitating project lifecycle</li></ul>System Change Projects and Regulatory Compliance<ul class="resume-item-list"><li>Directed projects for redesigning MAD, Over-Limit fee, Dynamic Currency Conversion and Capitalization of Fee and Charges in light of RBI guidelines</li><li>Managed projects end-to-end from requirement elicitation to UAT stage and facilitating Performance Verification Testing (PVT) post go-live</li><li>Rolled out RFP for Airport Lounge Aggregator- for on-boarding alternative third-party provider on comparative cost advantage, managed RFP, financial/commercial negotiations, API Integration, BIN Setup to Go-Live.</li><li>Support of internal and external audit processes including RBI, CAG etc.</li></ul>
 
 
 # VP of Global Communications
 - company: HDFC Bank Limited
   position: Senior Manager- Product and Strategy
-  duration: Sept, 2019 &mdash; Apr, 2022
-  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>•	Implementing payment solution programs, corporate portfolio management and B2B partnerships</li><li>•	Performing need-gap analysis, stakeholder analysis, working with cross functional teams to ensure business requirements are clearly captured, documented and prioritized </li></ul>
-
+  duration: Sept 2019 &mdash; Apr 2022
+  summary: Presales and Solution Delivery- Commercial Cards, Vendor Payment Solutions, Payment Gateways and Cross Border Payments<ul class="resume-item-list"><li>Implementing payment solution programs, corporate portfolio management and B2B partnerships</li><li>Performing need-gap analysis, stakeholder analysis, working with cross functional teams to ensure business requirements are clearly captured, documented and prioritized</li><li>Devising Go-To-Market, delivery strategy & projection on pricing decisions, cashbacks, rebate structures & waivers, expense solutions and driving revenues for the bank and MasterCard/ VISA/ Diners</li></ul>
+  
 # Director of Digital Stratgy
 - company: ICICI Bank Limited
   position: Solution Manager
-  duration: July, 2016 &mdash; Aug, 2019
+  duration: July 2016 &mdash; Aug 2019
   summary: <ul class="resume-item-list"><li>Implementing payment programs through commercial cards, vendor payment platforms and procurement to pay (P2P)</li><li>Eliciting business and functional requirements, organizing walkthrough sessions for complete project life-cycle</li><li>Conducting workshops and product demonstrations, collaborate on product features and prototyping</li><li> Management of the life cycle of the commercial cards, credit renewals and enhancements of facilities, CLI & CLD etc.</ul>
 
 # Communications Coordinator
 - company: Allahabad Bank
   position: Marketing Manager
-  duration: Sept, 2012  &mdash; June, 2016.
+  duration: Sept 2012  &mdash; June 2016.
   summary: <ul class="resume-item-list"><li>Designed and implemented internal/ external marketing campaigns for digital payment solutions, B2B asset products. Managed consultative sales, positioning and pricing of B2B vendor payment solutions and retail cards.</li></ul>
 
 
   # Communications Coordinator
 - company: HCL Technologies Limited
   position: Associate Business Analyst
-  duration: Sept, 2008  &mdash; June, 2010.
+  duration: Sept 2008  &mdash; June 2010.
   summary: Business Analysis- Projects of Media, Entertainment and Publishing domain, Vendor Payment Solutions, Payment Gateways and Cross Border Payments	<ul class="resume-item-list"><li>Requirement elicitation and documentation</li></ul>
