--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,19 +1,18 @@
 # Skills
-# Organizational leadership
-- skill: Product Management
-  description: Experienced in leading business teams in conceptualising and implementing product solutions. Specialised in digital payment product and banking domain.
 
-  skill: Pricing and Revenue Management
-  description: Managind Pricing strategy, conceptualising & implementing new fee lines and generating revenue.
+skill: Product Management
+description: Experienced in leading business teams in conceptualising and implementing product solutions. Specialised in digital payment product and banking domain.
   
-  # Project Manangement
-- skill: Project Manangement
-  description: Managing complete project lifecycle, documenting BRD, FSD, SRS etc. Conducting business analysis, skilled in JIRA, SQL and Python.
+skill: Pricing and Revenue Management
+description: Managind Pricing strategy, conceptualising & implementing new fee lines and generating revenue.
   
-- skill: Solution Design and Delivery
-  description: Managing resources, requirements, stakeholders, issues and risks, and project standards for the successful delivery of product/solution. Specialised in consultative sales and solution management.
+skill: Project Manangement
+description: Managing complete project lifecycle, documenting BRD, FSD, SRS etc. Conducting business analysis, skilled in JIRA, SQL and Python.
+  
+skill: Solution Design and Delivery
+description: Managing resources, requirements, stakeholders, issues and risks, and project standards for the successful delivery of product/solution. Specialised in consultative sales and solution management.
 
-- skill: Python, SQL, Microsoft Excel and Tableau
-- skill: Experienced in working with management tools viz. JIRA, VISA Intellilink, SAP Concur, TSYS Prime
-  description: Crazy about Bitcoin, Decentralised Finance and Blockchain Development on Solidity powered Ethereum ecosystem. 
+skill: Python, SQL, Microsoft Excel and Tableau
+skill: Experienced in working with management tools viz. JIRA, VISA Intellilink, SAP Concur, TSYS Prime
+description: Crazy about Bitcoin, Decentralised Finance and Blockchain Development on Solidity powered Ethereum ecosystem. 
 
