--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,15 +1,6 @@
 # Recognitions
+# Awards
 
-award: Champion of the Quarter
-  organization: SBI Cards and Payment Services Limited
-  year: Q2 2022
-  summary: Industry first implementation of RBI Master Direction 2022
-
-award: Champion of the Quarter
-  organization: SBI Cards and Payment Services Limited
-  year: Q3 2022
-  summary: Launch of SBI Cards Cashback Card
-  
 award: Certified Blockchain Specialist
   organization: Coursera, University of Buffalo
   year: 2021
