--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,12 +1,21 @@
 # Recognitions
 # Awards
+- award: Champion of the Quarter
+  organization: SBI Cards and Payment Services Limited
+  year: Q2 2022
+  summary: Industry first implementation of RBI Master Direction 2022
 
-award: Certified Blockchain Specialist
+- award: Champion of the Quarter
+  organization: SBI Cards and Payment Services Limited
+  year: Q3 2022
+  summary: Launch of SBI Cards Cashback Card
+  
+- award: Certified Blockchain Specialist
   organization: Coursera, University of Buffalo
   year: 2021
   summary: Fundamentals of Ethereum blockchain. Decentralized finance and usage of blockchain in fintech.
 
-award: Google Certified Project Manager
+- award: Google Certified Project Manager
   organization: Coursera, Google
   year: 2021
   summary: Awarded as Google Certified Project Manager
