--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -12,12 +12,12 @@
   summary: Awarded as Google Certified Project Manager
   
   # Recognitions
-- award: Certified Blockchain Specialist
-  organization: SBI Cards and Payment Services Limited
-  year: Q3 2022
+- award: Champion of the Quarter
+  organization: SBI Cards and Payment Services
+  year: Q2 2022
   summary: Industry first implementation of RBI Master Direction 2022
 
 - award: Champion of the Quarter
-  organization: SBI Cards and Payment Services Limited
+  organization: SBI Cards and Payment Services
   year: Q3 2022
   summary: Launch of SBI Cards Cashback Card
