--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -4,7 +4,7 @@
 - award: Certified Blockchain Specialist
   organization: Coursera, University of Buffalo
   year: 2021
-  summary: Fundamentals of Ethereum blockchain. Decentralized finance and usage of blockchain in fintech.
+  summary: Fundamentals of Ethereum blockchain, decentralized finance and usage of blockchain in fintech.
 
 - award: Google Certified Project Manager
   organization: Coursera, Google
@@ -15,9 +15,9 @@
 - award: Champion of the Quarter
   organization: SBI Cards and Payment Services
   year: Q2 2022
-  summary: Industry first implementation of RBI Master Direction 2022
+  summary: Industry first implementation of RBI Master Direction for Credit Card Issuers, April 2022
 
 - award: Champion of the Quarter
   organization: SBI Cards and Payment Services
   year: Q3 2022
-  summary: Launch of SBI Cards Cashback Card
+  summary: Launch of SBI Cards Cashback Card, August 2022
