--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "Dwarka, New Delhi"
 resume_header_contact_info:     "Dwarka, New Delhi, India • +91 97111-94611 • hello@rohitsarang.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Hi there! I am Rohit, an engineer turned banker and payments professional. I am working with SBI Cards as Assistant Vice President, managing Pricing, Network and Products. I love creating innovative products, playing with technology, building tools and have deep interest in finance. Do reach out to me at <b>hello@rohitsarang.com</b> to know more. Lets meet over a coffee (err.. a Zoom call) and explore opportunities!</p>"
+resume_header_intro: "<p>Hi there! I am Rohit, an engineer turned banker and payments professional. I am working with SBI Cards as Assistant Vice President, managing Pricing, Network and Products. I love creating innovative products, playing with technology, building tools and have deep interest in finance. Do reach out to me at <b>hello@rohitsarang.com</b> to know more and explore opportunities!</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
